--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install && npm run production:build
+    buildCommand: npm install --legacy-peer-deps && npm run production:build
     startCommand: npm run production:start
     envVars:
       - key: NODE_VERSION
