--- a/package.json
+++ b/package.json
@@ -71,14 +71,14 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
+    "typescript": "^5.3.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "^18.2.18"
+  },
+  "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "prettier": "^3.1.1",
