Fix all critical production deployment bugs
- Fix hardcoded localhost in tRPC client (providers.tsx)
- Add smart URL detection for Render/Vercel compatibility
- Add DIRECT_URL support for Neon migrations
- Update render.yaml with complete environment variables
- Enhance build.sh with migration error handling
- Add graceful Prisma shutdown handlers (SIGTERM/SIGINT)
- Update Next.js image config for Render/Vercel domains
- Fix environment validation to support optional NEXT_PUBLIC_APP_URL
- Add comprehensive deployment documentation
- Add migration troubleshooting guide
- Production build tested and verified successful

All critical bugs preventing Render deployment are now fixed.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/taadiway_crm?schema=public"
+# Database - Neon PostgreSQL
+# Pooled connection (for application queries with pgbouncer)
+DATABASE_URL="postgresql://user:password@ep-xxx-pooler.region.aws.neon.tech/dbname?sslmode=require&pgbouncer=true&connect_timeout=15"
 
-# NextAuth
-NEXTAUTH_URL="http://localhost:3000"
+# Direct connection (for migrations - without pgbouncer/pooler)
+DIRECT_URL="postgresql://user:password@ep-xxx.region.aws.neon.tech/dbname?sslmode=require&connect_timeout=30"
+
+# NextAuth - CRITICAL: Change these in production!
+NEXTAUTH_URL="https://your-app.onrender.com"  # or your production URL
 NEXTAUTH_SECRET="your-super-secret-key-change-this-in-production"
 
 # Email (Resend)
@@ -28,7 +32,9 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 GITHUB_CLIENT_ID="your-github-client-id"
 GITHUB_CLIENT_SECRET="your-github-client-secret"
 
-# App
+# App Configuration
+# Production: Use your actual domain (https://your-app.onrender.com)
+# Development: Use http://localhost:3000
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_APP_NAME="Taadiway CRM"
 
