--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install --legacy-peer-deps && npm run production:build
+    buildCommand: chmod +x scripts/build.sh && ./scripts/build.sh
     startCommand: npm run production:start
     envVars:
       - key: NODE_VERSION
@@ -13,9 +13,9 @@ services:
       - key: NODE_ENV
         value: production
       - key: DATABASE_URL
-        fromDatabase:
-          name: taadiway-db
-          property: connectionString
+        sync: false
+      - key: DIRECT_URL
+        sync: false
       - key: NEXTAUTH_URL
         sync: false
       - key: NEXTAUTH_SECRET
