--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@prisma/client": "^5.7.0",
-    "prisma": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -45,6 +44,12 @@
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -56,6 +61,8 @@
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "paystack-api": "^2.0.6",
+    "postcss": "^8.4.32",
+    "prisma": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^2.0.0",
@@ -66,20 +73,14 @@
     "stripe": "^14.10.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "prettier": "^3.1.1",
